--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,7 +1,16 @@
 global:
-  scrape_interval: 1s
+  scrape_interval: 5s
+  evaluation_interval: 30s
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets: [ 'alertmanager:9093' ]
+
+rule_files:
+  - "alerts.yml"
 
 scrape_configs:
   - job_name: 'aspnet-apps'
     static_configs:
-      - targets: ['sync-api:8080', 'async-api:8080']
+      - targets: [ 'sync-api:8080', 'async-api:8080' ]
